# orrbeam

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  clippy.toml  deny.toml  fb2p.md  pyproject.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
apple/: PLAN.md
branding/: BRAND.md
crates/orrbeam-core/: Cargo.toml
crates/orrbeam-core/src/: config.rs  identity.rs  lib.rs  node.rs  peers.rs  secure_file.rs  sunshine_api.rs  sunshine_conf.rs  tls.rs  wire.rs
crates/orrbeam-net/: Cargo.toml
crates/orrbeam-net/examples/: control_curl.rs
crates/orrbeam-net/src/: lib.rs  mdns.rs  orrtellite.rs
crates/orrbeam-net/src/client/: errors.rs  mod.rs  verifier.rs
crates/orrbeam-net/src/server/: errors.rs  middleware.rs  mod.rs  nonce.rs  routes.rs
crates/orrbeam-net/tests/: integration_test.rs
crates/orrbeam-platform/: Cargo.toml
crates/orrbeam-platform/src/: common.rs  detect.rs  lib.rs  linux.rs  macos.rs  shared_control.rs  windows.rs
crates/orrbeam-platform/tests/: integration_test.rs
docs/: architecture.md  verifying_control_plane.md
docs/design/: shared-control-bridge.md  shared-control-capacity.md  shared-control-input.md
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: tauri.ts
frontend/src/components/layout/: Shell.tsx
frontend/src/components/mesh/: MeshBar.tsx
frontend/src/components/moonlight/: MoonlightPanel.tsx  PairDialog.tsx  PeeringProgressModal.tsx
frontend/src/components/settings/: AboutTab.tsx  GeneralTab.tsx  MutualTrustPendingModal.tsx  MutualTrustRequestDialog.tsx  PeersTab.tsx  SettingsDrawer.tsx  TofuDialog.tsx
frontend/src/components/sunshine/: PairAcceptDialog.tsx  SunshinePanel.tsx
frontend/src/components/ui/: Button.tsx  Modal.tsx  StatusDot.tsx
frontend/src/stores/: moonlight.test.ts  moonlight.ts  peers.test.ts  peers.ts  platform.test.ts  platform.ts  sharedControl.ts  sunshine.test.ts  sunshine.ts
frontend/src/types/: peers.ts
orrbeam/: api_client.py  cli.py  config.py  daemon.py  discovery.py  node.py  popup.py  sunshine_config.py
orrbeam/platform/: __init__.py  base.py  linux.py  macos.py
orrbeam/tui/: app.py
scripts/: check-licenses.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: discovery.rs  mod.rs  moonlight.rs  pairing.rs  platform.rs  remote.rs  settings.rs  shared_control.rs  sunshine.rs
tests/e2e/: Cargo.toml  README.md
tests/e2e/src/: lib.rs
v1/: .orrnorelease  CLAUDE.md  PLAN.md
v1/apple/: PLAN.md
v1/orrbeam/: __init__.py  __main__.py  cli.py  daemon.py  discovery.py  identity.py  sunshine_api.py
v1/orrbeam/platform/: linux.py  macos.py
