[package]
name = "orrbeam-app"
description = "Orrbeam — unified Sunshine/Moonlight desktop application"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "orrbeam_app"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "orrbeam"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
orrbeam-core = { path = "../crates/orrbeam-core" }
orrbeam-net = { path = "../crates/orrbeam-net" }
orrbeam-platform = { path = "../crates/orrbeam-platform" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dirs = "6"
async-trait = "0.1"
rand = "0.9"
uuid.workspace = true
time.workspace = true
base64.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots"] }
