[package]
name = "orrbeam-core"
description = "Core types, configuration, and identity for orrbeam"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
dirs = "6"
hostname = "0.4"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio.workspace = true
