[package]
name = "orrbeam-core"
description = "Core types, configuration, and identity for orrbeam"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core", "serde", "pkcs8", "pem"] }
rand = "0.8"
dirs = "6"
hostname = "0.4"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio.workspace = true

# Control plane (WI-1) — TLS identity, trusted peers, wire protocol live in orrbeam-core
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
sha2.workspace = true
base64.workspace = true
time.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
