[package]
name = "orrbeam-net"
description = "Node discovery via mDNS and orrtellite for orrbeam"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
orrbeam-core = { path = "../orrbeam-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
mdns-sd = "0.11"
reqwest = { version = "0.12", features = ["json"] }
