[package]
name = "orrbeam-net"
description = "Node discovery via mDNS and orrtellite for orrbeam"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
orrbeam-core = { path = "../orrbeam-core" }
orrbeam-platform = { path = "../orrbeam-platform" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
hostname = "0.4"
mdns-sd = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots"] }

# Control plane server + client (WI-1)
axum.workspace = true
axum-server.workspace = true
tower.workspace = true
tower-http.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
sha2.workspace = true
base64.workspace = true
time.workspace = true
uuid.workspace = true
hex = "0.4"
async-trait = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
tempfile = "3"
