[package]
name = "orrbeam-platform"
description = "Platform abstraction for Sunshine/Moonlight process management"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
orrbeam-core = { path = "../orrbeam-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
which = "7"
hostname = "0.4"
