[package]
name = "orrbeam-platform"
description = "Platform abstraction for Sunshine/Moonlight process management"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
orrbeam-core = { path = "../orrbeam-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
which = "7"
hostname = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
